frame/support/test/tests/pallet_ui/step_003.rs
#[frame_support::pallet(Example)]
mod pallet {
}

fn main() {
}
